Tue May  6 23:28:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (local_tbl_gen): remove local variables duplicated with
	  arguments.

Tue May  6 18:48:50 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Adjust the time zone of "now".

Tue May  6 18:33:12 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* io.c (io_{read,write}_nonblock): use rb_get_kwargs instead of
	  rb_hash_aref.

Tue May  6 18:03:05 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Argument validation code moved from
	  Time.parse and Time.strptime.

Tue May  6 17:27:06 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): [DOC] Fix an example in the documentation
	  to use EST.
	  Reported by Marcus Stollsteimer.
	  [ruby-core:60778] [Bug #9521] and [ruby-core:61718] [Bug #9682]

Tue May  6 04:31:48 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* file.c (rb_f_test): removed meaningless "case 'a'".

Tue May  6 01:28:14 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (OpenURI.open_uri): Call StringIO#close only if
	  the StringIO object is not closed yet.
	  Reported by Jordi Massaguer Pla.  [ruby-core:42538] [Bug #6010]

Tue May  6 01:08:01 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: define File::NULL if not defined and /dev/null
	  is available to run benchmark driver on ruby 1.9.2.

Mon May  5 23:53:24 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: Add IP_TRANSPARENT.
	  IP_TRANSPARENT is provieded since glibc-2.12.
	  Reported by Eliezer Croitoru.  [ruby-core:50372] [Bug #7476]

Mon May  5 22:29:47 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_redirect): Open the file in write mode for
	  redirect from [:out, :err].
	  Proposed and implemented by Yusuke Endoh.
	  [ruby-dev:41430] [Feature #3348]

Mon May  5 21:52:35 2014  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/lib/pathname.rb (cleanpath_aggressive): make all
	  separators File::SEPARATOR from File::ALT_SEPARATOR.